[metadata]
name = flowfish
version = 1.0.1
description = Yet another pythonic workflow engine
url = https://github.com/exdatic/flowfish
author = André Kischkel
author_email = andre@exdatis.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = true
package_dir=
    =.
packages=find:
include_package_data = true
python_requires = >=3.7
install_requires =
    cloudpickle
    filelock>2.0
    graphviz>=0.6
    loguru
    murmurhash
    simpleeval>=0.9.2
    tqdm
tests_require =
    pydantic
    pytest
    pytest-asyncio
    uvloop

[options.entry_points]
console_scripts =
    flow = flowfish.__main__:main

[options.package_data]
* = **/*.json, **/*.txt

[options.extras_require]
test =
    flake8
    pydantic
    pytest
    pytest-asyncio
    uvloop
all =
    uvloop

[tool:pytest]
testpaths = tests
norecursedirs = tests/test
filterwarnings =
    ignore::DeprecationWarning
    ignore::RuntimeWarning
    ignore::pytest.PytestUnraisableExceptionWarning

[flake8]
max-line-length = 127
